# amanogawa

./: .devcontainer.json  .dockerignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  Makefile  README.md  setup.py
example/: blood.csv  example.toml  example_complex.toml  kinmosa.csv  mnist.csv  mnist_to_graph.toml  original.csv  simple.toml  simple_csv.toml  simple_to_graph.toml  simple_xml.toml
patch/: arrow  cpptmol  pybind11
src/amanogawa/: cli.cpp  main.cpp  pybind.cpp
src/amanogawa/core/: any.h  arrow_helper.h  column.h  column_info.h  confing.h  dl.h  executor.h  row.h  table_info.h  util.h
src/amanogawa/include/: api.h  branch_plugin.h  common.h  config.h  config_builder.h  confluence_plugin.h  flow.h  flow_graph.h  flow_plugin.h  format_plugin.h  plugin.h  sink.h  sink_plugin.h  source.h  source_plugin.h  util.h
src/amanogawa/plugin/branch/column/: column.cpp
src/amanogawa/plugin/confluence/key/: key.cpp
src/amanogawa/plugin/flow/example_add/: example_add.cpp
src/amanogawa/plugin/flow/filter/: filter.cpp
src/amanogawa/plugin/flow/to_graph/: measure.h  nndescent.h  to_graph.cpp
src/amanogawa/plugin/format/csv/: csv.cpp
src/amanogawa/plugin/format/json/: json.cpp
src/amanogawa/plugin/format/xml/: xml.cpp
src/amanogawa/plugin/sink/file/: file.cpp
src/amanogawa/plugin/sink/numpy/: numpy.cpp
src/amanogawa/plugin/source/file/: csv.h  file.cpp
src/amanogawa/plugin/source/json/: json.cpp
src/amanogawa/plugin/source/xml/: xml.cpp
src/nagare/: main.cpp
src/nagare/core/plugin/: extract.h  load.h  transform.h
src/nagare/plugin/extract/: from_csv.cpp
src/nagare/plugin/load/: to_plain.cpp
src/nagare/plugin/transform/: add.cpp
